tests/snapshots/run_wpt_conformance__onnx_gatherElements_float16_2D_input_and_int32_indices_options_axis_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gatherElements.https.any.js",
    "gatherElements float16 2D input and int32 indices options.axis=1",
    "onnx",
    "PASS",
)
